--- a/Style.css
+++ b/Style.css
@@ -79,7 +79,10 @@ h2
   height: 500px;
   
 }
-
+.CoachNames
+{
+  text-align: center;
+}
 .CoachSports
 {
   font-size: 2.6vh;
@@ -89,7 +92,7 @@ h2
 }
 #IconButton
 {
-  margin-bottom: 10px;
+  margin-bottom: 140px;
 }
 
 /*---Evenement--*/
